--- a/scss/_nav.scss
+++ b/scss/_nav.scss
@@ -11,33 +11,36 @@
   z-index: 5;
   left: 0px;
   top: 0;
-  ul {
-    padding: 0 10%;
-  }
-  li {
-    width: 100%;
-    display: block;
-  }
-  a {
-    display: block;
-    font-size: 14px;
-    text-transform: uppercase;
-    line-height: 30px;
-    border-bottom: 1px dotted $secondcolor;
-    text-align: left;
-    color: $secondcolor;
-  }
 }
 
-#nave a:hover {
+.main-nav {
+  padding: 0 10%;
+}
+
+.main-nav li {
+  width: 100%;
+  display: block;
+}
+
+.main-nav li a {
+  display: block;
+  font-size: 14px;
+  text-transform: uppercase;
+  line-height: 30px;
+  border-bottom: 1px dotted $secondcolor;
+  text-align: left;
+  color: $secondcolor;
+}
+
+.main-nav a:hover {
   color: $thirdtint;
 }
 
-#nave li:first-child a {
+.main-nav:first-child a {
   border-top: 0
 }
 
-#nave li:last-child a {
+.main-nav li:last-child a {
   border-bottom: 0
 }
 
@@ -53,26 +56,21 @@
     display: block;
     overflow: hidden;
   }
-
   #nave {
     top: 0;
     width: 100%;
     position: relative !important;
     left: 0px;
   }
-
   #nave.opened {
     max-height: 9999px
   }
-
   #nave a:hover {
     background: transparent
   }
-
   #nave .active a:hover {
     background: $thirdcolor;
   }
-
   .nav-toggle {
     display: block;
     width: 70px;
@@ -84,10 +82,9 @@
     right: 0;
     z-index: 500;
   }
-
- .nav-toggle:before  {
-    color:$secondcolor;
-    background:$thirdcolor $texture;
+  .nav-toggle:before {
+    color: $secondcolor;
+    background: $thirdcolor $texture;
     font-family: "fontawesome", sans-serif;
     font-style: normal;
     font-weight: normal;
@@ -95,7 +92,7 @@
     font-size: 28px;
     text-transform: none;
     position: absolute;
-    content:  "\f0c9";
+    content: "\f0c9";
     text-indent: 0;
     text-align: center;
     line-height: 77px;
@@ -103,10 +100,9 @@
     top: 0;
     left: 0;
   }
-
-   .nav-toggle.active:before  {
-    color:$secondcolor;
-    background:$thirdcolor $texture;
+  .nav-toggle.active:before {
+    color: $secondcolor;
+    background: $thirdcolor $texture;
     font-family: "fontawesome", sans-serif;
     font-style: normal;
     font-weight: normal;
@@ -114,7 +110,7 @@
     font-size: 28px;
     text-transform: none;
     position: absolute;
-    content:  "\f00d";
+    content: "\f00d";
     text-indent: 0;
     text-align: center;
     line-height: 77px;
@@ -123,8 +119,6 @@
     left: 0;
   }
 }
-
-
 
 @media screen and (min-width: 76em) {
   #nave {
@@ -142,46 +136,45 @@
   display: block;
 }
 
-#contact-details {
+.contact-details {
   margin-top: 20px;
   text-align: left;
   padding-left: 22px;
   text-indent: -10px;
 }
 
-#contact-details li {
+.contact-details li {
   text-transform: uppercase;
   font-size: 13px;
 }
 
-#contact-details li:first-child {
+.contact-details li:first-child {
   padding: 0.7em 0;
   font-size: 14px;
 }
 
-#contact-details ul li a {
-  border-bottom: 1px dotted $maincolor;
-  display: initial;
-  font-size: 13px;
-  padding: 0;
-  margin: 0;
+.social-nav {
+  margin-top: 1em;
+  text-align: center;
 }
 
-#social-nav {
-  margin-top: 1em;
+.social-nav li {
+  width: 100%;
+  display: inline;
+}
+
+.social-nav li a {
+  line-height: 30px;
   text-align: left;
-  li {
-    display: inline;
-  }
-  a {
-    display: inline;
-    margin: 0 3px;
-    font-size: 20px;
-  }
+  color: $secondcolor;
+  display: inline;
+  margin: 0 3px;
+  font-size: 24px;
 }
 
 @media screen and (max-width: 985px) {
-  #contact-details, #social-nav {
-    display:none;
+  .contact-details,
+  .social-nav {
+    display: none;
   }
 }
