--- a/scss/_boxing.scss
+++ b/scss/_boxing.scss
@@ -57,16 +57,17 @@
 
 .centered-title {
   position: absolute;
-  width: 100%;
+  width: 70%;
   top: 0%;
-  color: #fff;
+  left:15%;
+  color:$thirdcolor;
   text-transform: uppercase;
   letter-spacing: 1px;
-  background: none repeat scroll 0% 0% $maincolor;
+  background: $secondcolor;
   opacity: 0;
   transition: all 1s ease;
-  border-radius: 200px;
   margin: 1em 0;
+  padding: 1em 0;
 }
 
 .titlelay {
@@ -82,10 +83,6 @@
 //class that's added by js to hide title on portfolio page
 .disappearer {
   opacity: 1.0;
-  top: 30%;
+  top: 35%;
 }
 
-//class applied by fittext.js
-.responsive_headline {
-  padding: 1em 0;
-}
