--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -5,7 +5,7 @@
   height:95%;
 }
 
-@media screen and (max-width: 823px) {
+@media screen and (max-width: 985px) {
   .flex-friend{
     height:auto;
   }
@@ -21,9 +21,11 @@
 
 .mainwrapper h1 {
   text-transform: uppercase;
-  padding:10px 20px 0;
+  padding:25px 20px 0;
   margin: 0;
   font-size: 3em;
+  font-weight:900;
+
 }
 
 @media screen and (max-width: 985px) {
@@ -114,7 +116,7 @@
 @media screen and (max-width: 985px) {
   .gallery-wrapper {
     max-width: 100%;
-    margin:0 auto;
+    margin:0 auto 300px;
   }
 }
 
