--- a/css/global.css
+++ b/css/global.css
@@ -2381,7 +2381,7 @@ footer {
   color: rgba(30, 148, 30, 0.85);
   text-transform: uppercase;
   letter-spacing: 1px;
-  background: none repeat scroll 0% 0% rgba(255, 253, 253, 0.94);
+  background: rgba(255, 253, 253, 0.94);
   opacity: 0;
   transition: all 1s ease;
   margin: 1em 0;
