--- a/scss/_images.scss
+++ b/scss/_images.scss
@@ -38,6 +38,7 @@ img.alignnone {
   max-width:100%;
 }
 
+
 .wp-caption img {
   border: 0 none;
   padding: 0;
@@ -77,4 +78,8 @@ blockquote.right {
 
 .lead-image img {
   max-width:80%
+}
+
+.massive-image {
+  opacity:0.5;
 }
