--- a/scss/_galleries.scss
+++ b/scss/_galleries.scss
@@ -381,22 +381,29 @@ img.mfp-img {
   /*  text-align: center;
   margin-bottom: 40px;*/
 }
-
 .image-wrap {
   width: 30%;/* Change this value to have your thumbnails laid out differently */
   margin-bottom: 4px;
   display: inline-block;
-}
-
-  @media screen and (max-width: 985px) {
-    .image-wrap {
-    width: 100%;/* Change this value to have your thumbnails laid out differently */
-    margin: -250px auto 0;
-  }
+  background: rgba(53, 70, 33, 0.07);
 }
 
 .image-wrap img {
   width: 100%;
+}
+
+@media screen and (max-width: 656px) {
+  .image-wrap {
+    width: 100%;
+    height: 200px;
+    overflow: hidden;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  .image-wrap img {
+    
+  }
 }
 
 a.lightbox-link {
